--- a/1/EomTool/EomTool.Domain/EomTool.Domain.csproj
+++ b/1/EomTool/EomTool.Domain/EomTool.Domain.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Concrete\PaymentBatchRepository.cs" />
     <Compile Include="Concrete\PublisherRelatedItemsRepository.cs" />
     <Compile Include="Concrete\SecurityRepository.cs" />
+    <Compile Include="DTOs\CampaignAmount.cs" />
     <Compile Include="Entities\BatchUpdate.cs" />
     <Compile Include="Entities\CampaignStatus.cs" />
     <Compile Include="Entities\DAMain1.Designer.cs">
