--- a/1/EomTool/EomTool.Domain/EomTool.Domain.csproj
+++ b/1/EomTool/EomTool.Domain/EomTool.Domain.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Concrete\PaymentBatchRepository.cs" />
     <Compile Include="Concrete\PublisherRelatedItemsRepository.cs" />
     <Compile Include="Concrete\SecurityRepository.cs" />
+    <Compile Include="DTOs\CampAffId.cs" />
     <Compile Include="DTOs\CampaignAmount.cs" />
     <Compile Include="Entities\BatchUpdate.cs" />
     <Compile Include="Entities\CampaignStatus.cs" />
@@ -83,6 +84,8 @@
       <DependentUpon>EomToolSecurity.edmx</DependentUpon>
     </Compile>
     <Compile Include="Abstract\IEomEntitiesConfig.cs" />
+    <Compile Include="Entities\Invoice.cs" />
+    <Compile Include="Entities\InvoiceItem.cs" />
     <Compile Include="Entities\Item.cs" />
     <Compile Include="Entities\ItemAccountingStatus.cs" />
     <Compile Include="Entities\MediaBuyerApprovalStatus.cs" />
