invoices: refactoring + misc

--- a/1/EomTool/EomTool.Domain/EomTool.Domain.csproj
+++ b/1/EomTool/EomTool.Domain/EomTool.Domain.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Abstract\IEomEntitiesConfig.cs" />
     <Compile Include="Entities\Invoice.cs" />
     <Compile Include="Entities\InvoiceItem.cs" />
+    <Compile Include="Entities\InvoiceNote.cs" />
     <Compile Include="Entities\InvoiceStatus.cs" />
     <Compile Include="Entities\Item.cs" />
     <Compile Include="Entities\ItemAccountingStatus.cs" />
