--- a/1/EomTool/EomToolWeb/EomToolWeb.csproj
+++ b/1/EomTool/EomToolWeb/EomToolWeb.csproj
@@ -179,11 +179,11 @@
     <Compile Include="Infrastructure\NinjectControllerFactory.partial.cs" />
     <Compile Include="Models\AffiliatesListViewModel.cs" />
     <Compile Include="Models\BlogPost.cs" />
+    <Compile Include="Models\CampaignAffiliateAmountsModel.cs" />
     <Compile Include="Models\CampaignsByCountryViewModel.cs" />
     <Compile Include="Models\CampaignsListViewModel.cs" />
     <Compile Include="Models\CampaignViewModel.cs" />
-    <Compile Include="Models\ChooseAmountsModel.cs" />
-    <Compile Include="Models\InvoicesAccounting.cs" />
+    <Compile Include="Models\InvoicesSummary.cs" />
     <Compile Include="Models\ListViewMode.cs" />
     <Compile Include="Models\PagingInfo.cs" />
     <Compile Include="Models\PaymentBatchesViewModel.cs" />
@@ -3348,8 +3348,10 @@
     <Content Include="Views\Invoices\ChooseAdvertiser.cshtml" />
     <Content Include="Views\Invoices\Show.cshtml" />
     <Content Include="Views\Invoices\Index.cshtml" />
-    <Content Include="Views\Invoices\Accounting.cshtml" />
+    <Content Include="Views\Invoices\Summary.cshtml" />
     <Content Include="Views\Invoices\EditCampaign.cshtml" />
+    <Content Include="Views\Invoices\CampaignAmounts.cshtml" />
+    <Content Include="Views\Invoices\CampaignAffiliateAmounts.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
