--- a/1/EomTool/EomToolWeb/Web.config
+++ b/1/EomTool/EomToolWeb/Web.config
@@ -24,6 +24,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="EmailFromDefault" value="reporting@directagents.com" />
     <add key="EmailToEOM" value="eom@directagents.com" />
+    <add key="EmailToInvoiceRequest" value="kevin@directagents.com" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
